template/iac_eval/gpt/gpt-4o/full/row_392_full_update_1_template_20250518_184346.tf
To fulfill the business need, we will create an AWS Elastic Load Balancer (ELB) with a specified Elastic IP address. This configuration will include the creation of an Elastic IP, a security group to allow traffic, and the ELB itself. We will use the AWS provider and specify a region for deployment. The Elastic IP will be associated with the load balancer to ensure it has a static IP address.

<iac_template>
```hcl
provider "aws" {
  region = "us-east-1"
}

resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
}

resource "aws_subnet" "main" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = "us-east-1a"
}

resource "aws_security_group" "elb_sg" {
  name        = "elb_security_group"
  description = "Allow HTTP and HTTPS traffic"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_eip" "lb_eip" {
  vpc = true
}

resource "aws_lb" "main" {
  name               = "main-load-balancer"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.elb_sg.id]
  subnets            = [aws_subnet.main.id]

  dynamic "subnet_mapping" {
    for_each = [aws_eip.lb_eip]

    content {
      subnet_id     = aws_subnet.main.id
      allocation_id = subnet_mapping.value.id
    }
  }
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.main.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type = "fixed-response"

    fixed_response {
      content_type = "text/plain"
      message_body = "Hello, world"
      status_code  = "200"
    }
  }
}
```
</iac_template>

This Terraform configuration sets up an AWS Application Load Balancer with a specified Elastic IP. The load balancer listens on HTTP port 80 and returns a fixed response. The Elastic IP is associated with the load balancer to provide a static IP address.
